--- a/glide.yaml
+++ b/glide.yaml
@@ -1,6 +1,14 @@
 package: github.com/zenoss/go-svc
 import:
 - package: github.com/goadesign/goa
-  version: ^1.2.0
+  version: ~1.2.0
   subpackages:
+  - design
+  - design/apidsl
+  - dslengine
   - goagen
+  - middleware
+- package: golang.org/x/tools
+  subpackages:
+    - go/ast/astutil
+- package: gopkg.in/yaml.v2
