--- a/template/Makefile
+++ b/template/Makefile
@@ -1,7 +1,9 @@
 GLIDE := $(GOPATH)/bin/glide
 GOAGEN := vendor/github.com/goadesign/goa/goagen/goagen
+DESIGNPKG := {{Package}}/design
+DESIGN := $(shell find design -name \*.go)
 
-default: $(GOAGEN)
+default: app
 
 $(GLIDE):
 	@curl https://glide.sh/get | sh
@@ -11,3 +13,6 @@ glide.lock: $(GLIDE)
 
 $(GOAGEN): glide.lock $(GLIDE)
 	@cd $(@D) && go build
+
+app: $(DESIGN) | $(GOAGEN)
+	@$(GOAGEN) app -d $(DESIGNPKG)
