--- a/template/glide.yaml
+++ b/template/glide.yaml
@@ -10,6 +10,8 @@ import:
   - middleware
 - package: golang.org/x/tools
   subpackages:
-    - go/ast/astutil
+  - go/ast/astutil
 - package: gopkg.in/yaml.v2
 - package: github.com/spf13/cobra
+- package: github.com/Sirupsen/logrus
+  version: ~0.11.5
