--- a/template/glide.yaml
+++ b/template/glide.yaml
@@ -15,3 +15,4 @@ import:
 - package: github.com/spf13/cobra
 - package: github.com/Sirupsen/logrus
   version: ~0.11.5
+- package: github.com/zenoss/zenkit
