Add default config file

--- a/template/Dockerfile
+++ b/template/Dockerfile
@@ -6,4 +6,5 @@ RUN go build -o /bin/{{Name}}
 
 FROM alpine
 COPY --from=0 /bin/{{Name}} /bin/{{Name}}
+COPY ./{{Name}}.yml /etc/{{Name}}.yml
 CMD ["/bin/{{Name}}", "server"]
