--- a/template/glide.yaml
+++ b/template/glide.yaml
@@ -16,3 +16,4 @@ import:
 - package: github.com/Sirupsen/logrus
   version: ~0.11.5
 - package: github.com/zenoss/zenkit
+- package: github.com/tylerb/graceful
