--- a/Makefile2
+++ b/Makefile2
@@ -1,6 +1,6 @@
 GLIDE     := $(GOPATH)/bin/glide
 GOAGEN    := vendor/github.com/goadesign/goa/goagen/goagen
-DESIGNPKG := {{Package}}/design
+DESIGNPKG := github.com/zenoss/helloworld/design
 DESIGN 	  := $(shell find design -name \*.go)
 
 default: app
@@ -15,6 +15,7 @@ $(GOAGEN): glide.lock $(GLIDE)
 	@cd $(@D) && go build
 
 app: $(DESIGN) | $(GOAGEN)
+	@$(GOAGEN) gen --pkg-path=github.com/zenoss/zenkit/resources -d $(DESIGNPKG)
 	@$(GOAGEN) app -o resources -d $(DESIGNPKG)
 	@$(GOAGEN) controller --pkg resources -o resources -d $(DESIGNPKG)
 	@$(GOAGEN) swagger -d $(DESIGNPKG)
