--- a/template/glide.yaml
+++ b/template/glide.yaml
@@ -17,3 +17,4 @@ import:
   version: ~0.11.5
 - package: github.com/zenoss/zenkit
 - package: github.com/tylerb/graceful
+- package: github.com/rcrowley/go-metrics
