--- a/template/glide.yaml
+++ b/template/glide.yaml
@@ -1,4 +1,6 @@
-package: github.com/zenoss/go-svc
+package: github.com/zenoss/{{Name}}
+ignore:
+  - github.com/zenoss/{{Name}}
 import:
 - package: github.com/goadesign/goa
   version: ~1.2.0
