--- a/template/Dockerfile
+++ b/template/Dockerfile
@@ -7,4 +7,7 @@ RUN go build -o /bin/{{Name}}
 FROM alpine
 COPY --from=0 /bin/{{Name}} /bin/{{Name}}
 COPY ./{{Name}}.yml /etc/{{Name}}.yml
+
+EXPOSE {{Port}}
+
 CMD ["/bin/{{Name}}", "server"]
