--- a/project.json
+++ b/project.json
@@ -1,9 +1,7 @@
 {
-  "Package": "github.com/zenoss/helloworld",
+  "PackageOwner": "github.com/zenoss",
   "Name": "helloworld",
   "Title": "Hello World Service",
-  "DockerHubOwner": "zenoss",
-  "DockerHubRepo": "helloworld-svc",
   "Description": "A sample service to show how the microservice stack works",
   "Port": "8080"
 }
