--- a/template/glide.yaml
+++ b/template/glide.yaml
@@ -1,6 +1,7 @@
-package: github.com/zenoss/{{Name}}
+{{ $pkg := print ((print (env "GOPATH") "/src/") | trimPrefix (env "PWD")) "/" Name -}}
+package: {{$pkg}}
 ignore:
-  - github.com/zenoss/{{Name}}
+  - {{$pkg}}
 import:
 - package: github.com/goadesign/goa
   version: ~1.2.0
