--- a/template/.gitignore
+++ b/template/.gitignore
@@ -10,7 +10,8 @@
 # Test binary, build with `go test -c`
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
+# Output of the go coverage tools
+*.coverprofile
 *.out
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
