--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       {{Name | toUpper}}_HTTP_PORT: {{Port}}
       {{Name | toUpper}}_AUTH_KEY_FILE: /run/secrets/auth_key
+      {{Name | toUpper}}_LOG_LEVEL: info
     secrets:
       - auth_key
 secrets:
