--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       {{Name | toUpper}}_HTTP_PORT: {{Port}}
       {{Name | toUpper}}_AUTH_KEY_FILE: /run/secrets/auth_key
       {{Name | toUpper}}_LOG_LEVEL: info
+      {{Name | toUpper}}_TRACING_ENABLED: 0
     secrets:
       - auth_key
 secrets:
