--- a/template/Makefile
+++ b/template/Makefile
@@ -1,14 +1,29 @@
 {{ $pkg := print ((print (env "GOPATH") "/src/") | trimPrefix (env "PWD")) "/" Name -}}
-GLIDE                := $(GOPATH)/bin/glide
-GINKGO               := $(GOPATH)/bin/ginkgo
-GO_BINDATA           := $(GOPATH)/bin/go-bindata
+ZENKIT_VERSION       := 1.0
+GINKGO               := $(shell command -v ginkgo 2> /dev/null)
 GOAGEN               := vendor/github.com/goadesign/goa/goagen/goagen
-DESIGNPKG            := {{$pkg}}/design
+PACKAGE              := {{$pkg}}
+DESIGNPKG            := $(PACKAGE)/design
 DESIGN 	             := $(shell find design -name \*.go)
 DOCKER_COMPOSE       := /usr/local/bin/docker-compose
-GIT_FLOW 			 := $(shell git flow version &>/dev/null && echo git flow)
-
-DOCKER_COMPOSE_VERSION := 1.13.0
+LOCAL_USER_ID        := $(shell id -u)
+BUILD_IMG            := zenoss/zenkit-build:$(ZENKIT_VERSION)
+COVERAGE_DIR         := coverage
+DOCKER_CMD           := docker run --rm -t \
+							-v $(CURDIR):/go/src/$(PACKAGE):rw \
+							-v $(HOME)/.glide:/home/user/.glide:rw \
+							-e LOCAL_USER_ID=$(LOCAL_USER_ID) \
+							-w /go/src/$(PACKAGE) \
+							$(BUILD_IMG)
+GOAGEN_CMD           := $(DOCKER_CMD) $(GOAGEN)
+GLIDE                := $(shell command -v glide 2> /dev/null)
+ifndef GLIDE
+GLIDE                := $(DOCKER_CMD) glide
+endif
+GOBINDATA            := $(shell command -v go-bindata 2> /dev/null)
+ifndef GOBINDATA
+GOBINDATA            := $(DOCKER_CMD) go-bindata
+endif
 
 .PHONY: default
 default: app init
@@ -16,59 +31,75 @@ default: app init
 .PHONY: docker-compose
 docker-compose: $(DOCKER_COMPOSE)
 
+$(DOCKER_COMPOSE): DOCKER_COMPOSE_VERSION := 1.13.0
 $(DOCKER_COMPOSE):
 	@if [ ! -w $(@D) ]; then echo 'No docker-compose found. Please run "sudo make docker-compose" to install it.'; exit 2; else true; fi
 	@curl -L https://github.com/docker/compose/releases/download/$(DOCKER_COMPOSE_VERSION)/docker-compose-`uname -s`-`uname -m` > $@
 	@chmod +x $@
 
-$(GLIDE):
-	@curl https://glide.sh/get | sh
+glide.lock: glide.yaml
+	@mkdir -p $(HOME)/.glide
+	@$(GLIDE) update --strip-vendor
 
-$(GINKGO):
-	@go get -u github.com/onsi/ginkgo/ginkgo
+vendor: glide.lock
+	@mkdir -p $(HOME)/.glide
+	@$(GLIDE) install --strip-vendor
 
-$(GO_BINDATA):
-	@go get -u github.com/jteeuwen/go-bindata/go-bindata
+$(GOAGEN): vendor
+	@$(DOCKER_CMD) /bin/sh -c 'cd $(@D) && go build'
 
-glide.lock: $(GLIDE)
-	@$(GLIDE) up
-
-$(GOAGEN): glide.lock $(GLIDE)
-	@cd $(@D) && go build
-
-swagger/swagger.go: $(DESIGN) | $(GOAGEN) $(GO_BINDATA)
-	@$(GOAGEN) swagger -d $(DESIGNPKG)
-	@$(GO_BINDATA) -ignore='swagger\.go' -pkg swagger -o $@ swagger/
+swagger/swagger.go: $(DESIGN) | $(GOAGEN)
+	@$(GOAGEN_CMD) swagger -d $(DESIGNPKG)
+	@$(GOBINDATA) -ignore='swagger\.go' -pkg swagger -o $@ swagger/
 
 resources/controller_reg.go: $(DESIGN) | $(GOAGEN)
-	@$(GOAGEN) gen -o resources --pkg-path=github.com/zenoss/zenkit/generate -d $(DESIGNPKG)
+	@$(GOAGEN_CMD) gen -o resources --pkg-path=github.com/zenoss/zenkit/generate -d $(DESIGNPKG)
 
 resources/app/%.go: $(DESIGN) | $(GOAGEN)
-	@$(GOAGEN) app -o resources -d $(DESIGNPKG)
+	@$(GOAGEN_CMD) app -o resources -d $(DESIGNPKG)
 
 resources/%.go: $(DESIGN) | $(GOAGEN)
-	@$(GOAGEN) controller --regen --pkg resources -o resources -d $(DESIGNPKG)
+	@$(GOAGEN_CMD) controller --regen --pkg resources -o resources -d $(DESIGNPKG)
 
 .PHONY: app
-app: swagger/swagger.go resources/controller_reg.go resources/metrics.go resources/app/controllers.go
+app: swagger/swagger.go resources/controller_reg.go resources/admin.go resources/app/controllers.go
 
 .PHONY: run
-run: glide.lock $(DOCKER_COMPOSE)
+run: vendor $(DOCKER_COMPOSE)
 	@$(DOCKER_COMPOSE) up --build
 
 .PHONY: build
-build: glide.lock $(DOCKER_COMPOSE)
+build: vendor $(DOCKER_COMPOSE)
 	@$(DOCKER_COMPOSE) build {{Name}}
 
+.PHONY: test-containerized
+test-containerized:
+	@$(DOCKER_CMD) make test
+
 .PHONY: test
-test: app $(GINKGO)
-	@$(GINKGO) -r -race -cover -skipPackage=vendor
+ifndef GINKGO
+test: test-containerized
+else
+test: COVERAGE_PROFILE := $(COVERAGE_DIR)/profile.out
+test: COVERAGE_HTML    := $(COVERAGE_DIR)/index.html
+test: COVERAGE_XML     := $(COVERAGE_DIR)/coverage.xml
+test: app vendor
+	@mkdir -p $(COVERAGE_DIR)
+	@ginkgo -r \
+		-cover \
+		-covermode=count \
+		--skipPackage vendor
+	@gocovmerge $$(find . -name \*.coverprofile) > $(COVERAGE_PROFILE)
+	@go tool cover -html=$(COVERAGE_PROFILE) -o $(COVERAGE_HTML)
+	@gocov convert $(COVERAGE_PROFILE) | gocov-xml > $(COVERAGE_XML)
+endif
 
 .PHONY: clean
 clean:
 	rm -f resources/controller_reg.go
 	rm -rf resources/app
 	rm -rf swagger
+	rm -rf $(COVERAGE_DIR)
 	$(DOCKER_COMPOSE) down
 
 .PHONY: mrclean
@@ -77,13 +108,17 @@ mrclean: clean
 	rm -rf vendor
 
 .git:
-ifndef GIT_FLOW
-	@echo 'No git flow found. Please run "sudo apt install -y git-flow" to install it.'; exit 2
-endif
 	@git init
 	@git add .; git commit -m "Initial commit"
-	@git flow init -d
 
 .PHONY: init
 init: .git
+
+local-dev:
+	go get github.com/onsi/ginkgo/ginkgo
+	go get github.com/onsi/gomega
+	go get github.com/wadey/gocovmerge
+	go get github.com/axw/gocov/gocov
+	go get github.com/AlekSi/gocov-xml
+	curl https://glide.sh/get | sh
 
