Update config properties.

--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -6,11 +6,11 @@ services:
     ports:
       - "{{Port}}:{{Port}}"
     environment:
-      {{Name | toUpper}}_HTTP_PORT: {{Port}}
-      {{Name | toUpper}}_AUTH_KEY_FILE: /run/secrets/auth_key
       {{Name | toUpper}}_LOG_LEVEL: info
+      {{Name | toUpper}}_HTTP_PORT: {{Port}}
+      {{Name | toUpper}}_AUTH_ENABLED: 0
+      {{Name | toUpper}}_AUTH_KEY_FILE: /run/secrets/auth_key
       {{Name | toUpper}}_TRACING_ENABLED: 0
-      {{Name | toUpper}}_DEVMODE: 1
     secrets:
       - auth_key
 secrets:
