--- a/template/.gitignore
+++ b/template/.gitignore
@@ -17,3 +17,7 @@
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
 coverage/
+
+# Make artifacts
+tag.id
+version.yaml
