--- a/template/Makefile
+++ b/template/Makefile
@@ -24,11 +24,6 @@ GOBINDATA            := $(shell command -v go-bindata 2> /dev/null)
 ifndef GOBINDATA
 GOBINDATA            := $(DOCKER_CMD) go-bindata
 endif
-IMAGE_NAME			 := zenoss/{{Name}}
-
-ifneq ("$(wildcard .project_name)", "")
-	PROJECT_NAME = -p $(shell cat .project_name)
-endif
 
 .PHONY: default
 default: app init
@@ -71,17 +66,7 @@ app: swagger/swagger.go resources/controller_reg.go resources/admin.go resources
 
 .PHONY: run
 run: vendor $(DOCKER_COMPOSE)
-	@$(DOCKER_COMPOSE) $(PROJECT_NAME) up --build
-
-.PHONY: build
-build: export COMMIT_SHA = $(shell git rev-parse HEAD)
-ifeq("$(wildcard .image_tag)", "")
-build: export IMAGE = $(IMAGE_NAME)
-else
-build: export IMAGE = $(IMAGE_NAME):$(shell cat tag.id)
-endif
-build: vendor $(DOCKER_COMPOSE)
-	@$(DOCKER_COMPOSE) build {{Name}}
+	@$(DOCKER_COMPOSE) up --build
 
 .PHONY: test-containerized
 test-containerized:
@@ -105,47 +90,18 @@ test: app vendor
 	@gocov convert $(COVERAGE_PROFILE) | gocov-xml > $(COVERAGE_XML)
 endif
 
-.PHONY: api-test
-api-test:
-	@echo "not implemented"
-
-.PHONY: push
-ifeq ("$(wildcard .image_tag)","")
-push: export IMAGE = $(IMAGE_NAME)
-else
-push: export IMAGE = $(IMAGE_NAME):$(shell cat .image_tag)
-endif
-push:
-ifndef REMOTE_IMAGE
-	@echo "REMOTE_IMAGE not set" 1>&2; exit 2
-else
-	@docker tag $(IMAGE) $(REMOTE_IMAGE)
-	@docker push $(REMOTE_IMAGE)
-endif
-
-.PHONY: version
-ifndef REMOTE_IMAGE
-version:
-	@echo "REMOTE_IMAGE not set" 1>&2; exit 2
-else
-version:
-	@cat version-template.yaml | REMOTE_IMAGE=$(REMOTE_IMAGE) envsubst > version.yaml
-endif
-
 .PHONY: clean
 clean:
 	rm -f resources/controller_reg.go
 	rm -rf resources/app
 	rm -rf swagger
 	rm -rf $(COVERAGE_DIR)
-	rm -f version.yaml
 	$(DOCKER_COMPOSE) down
 
 .PHONY: mrclean
 mrclean: clean
 	rm -rf glide.lock
 	rm -rf vendor
-	rm -f .image_tag .project_name
 
 .git:
 	@git init
