--- a/template/ci/Jenkinsfile
+++ b/template/ci/Jenkinsfile
@@ -7,6 +7,8 @@
 //  version.yml         - docker-compose file that describes the version of the image to test
 //
 
+MAKE='make -f Makefile -f ci.mk'
+
 node('docker') {
     currentBuild.displayName = "PR #${env.ghprbPullId}@${env.NODE_NAME}"
     configFileProvider([
@@ -16,26 +18,26 @@ node('docker') {
     }
 
     checkout scm
-    service = load 'ci/service.groovy'
-	SHA=sh(script: 'git rev-parse --short=8 HEAD | tee .image_tag', returnStdout: true)
-    sh("echo -n {{Name}}-${env.BUILD_NUMBER} > .project_name")
+    service = load 'service.groovy'
+    SHA=sh(script: 'git rev-parse --short=8 HEAD | tee ci/.image_tag', returnStdout: true)
+    sh("echo -n {{Name}}-${env.BUILD_NUMBER} > ci/.project_name")
 
-	try	{
-		stage('Run service tests') {
-			sh('make test')
-		}
+    try	{
+        stage('Run service tests') {
+            sh("${MAKE} test")
+        }
 
-		stage('Build service image') {
-			sh('make build')
-		}
+        stage('Build service image') {
+            sh("${MAKE} build")
+        }
 
-		stage('Run service api tests') {
-			sh('make api-test')
-		}
-	} finally {
-		stage ('Clean test environment') {
-			sh('make clean')
-		}
+        stage('Run service api tests') {
+            sh("${MAKE} api-test")
+        }
+    } finally {
+        stage ('Clean test environment') {
+            sh("${MAKE} ci-clean")
+        }
     }
 
 
@@ -45,7 +47,7 @@ node('docker') {
             def imageName = "${global.PUBLISHERS[i]}/${service.DOCKER_IMAGE}:${SHA}"
             def stepName  = "publishing image to [${[i]}] ${imageName}"
             pubSteps[stepName] = {
-                sh("make push REMOTE_IMAGE=${imageName}")
+                sh("${MAKE} push REMOTE_IMAGE=${imageName}")
             }
         }
         parallel pubSteps
@@ -53,7 +55,7 @@ node('docker') {
 
     stage('Promote to staging') {
         def imageName = "${global.PUBLISHER_STAGING}/${service.DOCKER_IMAGE}:${SHA}"
-        sh("make version REMOTE_IMAGE=${imageName}")
+        sh("${MAKE} version REMOTE_IMAGE=${imageName}")
         archiveArtifacts artifacts: 'version.yaml'
         build job: env.GLOBAL_ACCEPTANCE_JOB, parameters: [
             text(name: 'VERSION', value: readFile('version.yaml'))
