--- a/template/ci/Jenkinsfile
+++ b/template/ci/Jenkinsfile
@@ -24,7 +24,7 @@ node('docker') {
 
     try	{
         stage('Run service tests') {
-            sh("${MAKE} test")
+            sh("${MAKE} unit-test")
         }
 
         stage('Build service image') {
