Update CI-related files
+ Instead of writing values into files in the ci directory, the
  Jenkinsfile communicates with ci.mk via environment variables.
+ Use the Jenkins-provided environment variable ghprbActualCommit to
  determine the git SHA for tagging purposes.  Previously it was using
  the current git SHA, which was the result of a speculative merge into
  master performed by Jenkins.
+ Define the image name in a sngle place, the .env file, which is
  referenced by both docker-compose.yaml and ci.mk.  The Jenkinsfile no
  longer needs to know the name of the image; it communicates the
  registry and tag to make and allows make to build the complete image
  name.
+ Added validation targets to ci.mk to ensure that required environment
  variables are set on a per-target basis.
+ ci.mk now includes Makefile, so that make can be invoked as
  "make -f ci.mk" instead of "make -f Makefile -f ci.mk".

--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.3"
 services:
   {{Name}}:
-    image: ${IMAGE:-zenoss/zing-{{Name}}:dev}
-    build:
+    image: ${SERVICE_IMAGE}:${IMAGE_TAG:-dev}
+    build: 
         context: .
         labels:
           zenoss.zing.commit-sha: ${COMMIT_SHA:-none}
