--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.3"
 services:
   {{Name}}:
     image: ${IMAGE:-zenoss/zing-{{Name}}:dev}
-    build: 
+    build:
         context: .
         labels:
           zenoss.zing.commit-sha: ${COMMIT_SHA:-none}
@@ -15,7 +15,7 @@ services:
     environment:
       {{Name | toUpper}}_LOG_LEVEL: info
       {{Name | toUpper}}_HTTP_PORT: {{Port}}
-      {{Name | toUpper}}_AUTH_ENABLED: 0
+      {{Name | toUpper}}_AUTH_DISABLED: 1
       {{Name | toUpper}}_AUTH_KEY_FILE: /run/secrets/auth_key
       {{Name | toUpper}}_TRACING_ENABLED: 0
     secrets:
