--- a/template/ci/Makefile
+++ b/template/ci/Makefile
@@ -37,6 +37,8 @@ PROJECT_NAME_VALID:
 
 .PHONY: build
 build: export COMMIT_SHA ?= $(shell git rev-parse HEAD)
+build: export GIT_BRANCH ?= $(shell git symbolic-ref HEAD | sed -e "s/^refs\/heads\///")
+build: export PULL_REQUEST = ${ghprbPullLink}
 build: $(DOCKER_COMPOSE)
 	@$(DOCKER_COMPOSE) build {{Name}}
 
