--- a/template/glide.yaml
+++ b/template/glide.yaml
@@ -16,7 +16,7 @@ import:
   - go/ast/astutil
 - package: gopkg.in/yaml.v2
 - package: github.com/spf13/cobra
-- package: github.com/sirupsen/logrus
+- package: github.com/Sirupsen/logrus
   version: ~0.11.5
 - package: github.com/zenoss/zenkit
 - package: github.com/tylerb/graceful
